apparent null-pointer fix